--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/frankheggeness/articles-products-and-express#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
-    "method-override": "^3.0.0"
+    "knex": "^0.16.5",
+    "method-override": "^3.0.0",
+    "pg": "^7.10.0",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
